# Wordle-Game

./: .env  README.md  pyproject.toml
config/: logging_config.py  settings.py
models/: models.py
tests/: test_api_contract.py  test_model.py
wordle/: game.py  game_loop.py  word_ingestion.py
